force-app/main/default/objects/QI_Line_Item__c/QI_Line_Item__c.object-meta.xml
<CustomObject>
    <label>QI Line Item</label>
    <nameField>
        <displayFormat>QILI-{0000}</displayFormat>
        <label>QI Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QI Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>QI_Inspection__c</fullName>
        <label>QI Inspection</label>
        <referenceTo>QI_Inspection__c</referenceTo>
        <relationshipLabel>QI Line Items</relationshipLabel>
        <relationshipName>QI_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Order_Line_Item_Ref__c</fullName>
        <label>Line Item Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FM_Score__c</fullName>
        <label>FM Score (1-10)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FM_Note__c</fullName>
        <label>FM Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score_Flag__c</fullName>
        <formula>FM_Score__c &lt;= 3</formula>
        <label>Score Flag (3 or Below)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catalog_Item__c</fullName>
        <label>Catalog Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>FM_Note_Required_On_Low_Score</fullName>
        <active>true</active>
        <description>FM note is required when score is 3 or below</description>
        <errorConditionFormula>FM_Score__c &lt;= 3 &amp;&amp; ISBLANK(FM_Note__c)</errorConditionFormula>
        <errorMessage>FM Note is required when score is 3 or below. Describe the specific defect and whether rework is needed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Score_Range_1_to_10</fullName>
        <active>true</active>
        <description>FM Score must be between 1 and 10</description>
        <errorConditionFormula>FM_Score__c &lt; 1 || FM_Score__c &gt; 10</errorConditionFormula>
        <errorMessage>FM Score must be between 1 and 10.</errorMessage>
    </validationRules>
</CustomObject>