force-app/main/default/objects/QI_Line_Item__c/fields/FM_Note__c.field-meta.xml
<CustomField>
    <fullName>FM_Note__c</fullName>
    <label>FM Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>