force-app/main/default/objects/QI_Line_Item__c/fields/FM_Score__c.field-meta.xml
<CustomField>
    <fullName>FM_Score__c</fullName>
    <label>FM Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>