force-app/main/default/objects/QI_Line_Item__c/fields/Foreman_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Photo_URL__c</fullName>
    <formula>IF(ISBLANK(Work_Order_Line_Item__r.Foreman_Photo_URL__c), &quot;&quot;, Work_Order_Line_Item__r.Foreman_Photo_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreman Photo URL</label>
    <type>Text</type>
</CustomField>