force-app/main/default/objects/QI_Line_Item__c/fields/QI_Inspection__c.field-meta.xml
<CustomField>
    <fullName>QI_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QI Inspection</label>
    <referenceTo>QI_Inspection__c</referenceTo>
    <relationshipLabel>QI Line Items</relationshipLabel>
    <relationshipName>QI_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>