force-app/main/default/objects/QI_Line_Item__c/fields/Score_Flag__c.field-meta.xml
<CustomField>
    <fullName>Score_Flag__c</fullName>
    <formula>NOT(ISBLANK(FM_Score__c)) &amp;&amp; FM_Score__c &lt;= 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Flag</label>
    <type>Checkbox</type>
</CustomField>