force-app/main/default/objects/QI_Line_Item__c/fields/Work_Order_Line_Item_Ref__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item_Ref__c</fullName>
    <label>Work Order Line Item Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>